# line-agui-adapter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/fastapi/: main.py
python/: .env.example  README.md  pyproject.toml
python/src/line_agui_adapter/: __init__.py  adapter.py  event_buffer.py  line_sdk.py  models.py
python/tests/servers/google_adk/: main.py
python/tests/unit/: test_adapter.py
src/line_agui_adapter/: __init__.py  adapter.py  client.py  middleware.py
tests/: smoke_test.py
tests/e2e/: test_google_adk_e2e.py
tests/integration/: test_http_integration.py
tests/smoke/: test_smoke.py
tests/unit/: test_adapter.py
