[project]
name = "line-agui-adapter"
version = "0.1.0"
description = "AG-UI adapter for line-bot-sdk-python v3"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sogo Kato", email = "sogo.kato@outlook.com" }
]
keywords = ["ag-ui", "fastapi", "line", "line-bot-sdk", "messaging-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.14",
    "httpx>=0.27.0",
    "line-bot-sdk>=3.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/SogoKato/line-agui-adapter"
Repository = "https://github.com/SogoKato/line-agui-adapter"
Issues = "https://github.com/SogoKato/line-agui-adapter/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ag-ui-adk>=0.5.1",
    "fastapi>=0.135.1",
    "google-adk>=1.27.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "W",
]
ignore = [
    "D203",
    "D213",
]
